--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
 		<org.eclipse.paho.mqtt>1.2.1</org.eclipse.paho.mqtt>
 		<orika-core.version>1.5.4</orika-core.version>
 		<pinyin4j.version>2.5.0</pinyin4j.version>
+		<mysql.version>6.0.6</mysql.version>
+		<javax.mail.version>1.4.7</javax.mail.version>
 	</properties>
 
 
