--- a/homeauto-common/pom.xml
+++ b/homeauto-common/pom.xml
@@ -144,9 +144,13 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>2.1.4</version>
+            <version>${easyexcel.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>${rocketmq-client.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
