集成数据库

--- a/homeauto-contact-gateway/pom.xml
+++ b/homeauto-contact-gateway/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>homeauto-common</artifactId>
             <version>${com.landleaf.homeauto.version}</version>
         </dependency>
+        <!--postgresql-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
