--- a/homeauto-contact-gateway/src/main/resources/bootstrap.properties
+++ b/homeauto-contact-gateway/src/main/resources/bootstrap.properties
@@ -5,4 +5,4 @@ spring.cloud.nacos.config.group=home-auto
 spring.application.name=homeauto-contact-gateway
 #spring.cloud.nacos.config.file-extension=properties
 spring.cloud.nacos.config.file-extension=yaml
-spring.profiles.active=dev
+spring.profiles.active=local
