--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<com.landleaf.homeauto.version>0.0.1-SNAPSHOT</com.landleaf.homeauto.version>
 		<java.version>1.8</java.version>
 		<spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
-		<spring-cloud.version>Hoxton.SR5</spring-cloud.version>
+		<spring-cloud.version>Finchley.SR4</spring-cloud.version>
 		<fastjson.version>1.2.70</fastjson.version>
 		<jjwt.version>0.10.5</jjwt.version>
 		<com.alibaba.druid>1.1.18</com.alibaba.druid>
