--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.9.RELEASE</version>
+		<version>2.1.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -34,7 +34,7 @@
 		<com.landleaf.homeauto.version>0.0.1-SNAPSHOT</com.landleaf.homeauto.version>
 		<java.version>1.8</java.version>
 		<spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
-		<spring-cloud.version>Finchley.SR4</spring-cloud.version>
+		<spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
 		<fastjson.version>1.2.70</fastjson.version>
 		<jjwt.version>0.10.5</jjwt.version>
 		<com.alibaba.druid>1.1.18</com.alibaba.druid>
