--- a/homeauto-center-gateway/pom.xml
+++ b/homeauto-center-gateway/pom.xml
@@ -20,7 +20,26 @@
             <groupId>com.landleaf</groupId>
             <artifactId>homeauto-common</artifactId>
             <version>${com.landleaf.homeauto.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 
 
