--- a/homeauto-center-device/src/main/resources/application-local.yml
+++ b/homeauto-center-device/src/main/resources/application-local.yml
@@ -35,9 +35,9 @@ spring:
       socket-keep-alive: true
   ## mysql
   datasource:
-    url: jdbc:postgresql://134.175.92.62:5432/home_auto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
-    username: test
-    password: 123456
+    url: jdbc:postgresql://172.20.11.204:5434/homeauto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
+    username: homeauto
+    password: landleaf@123.com
     driver-class-name: org.postgresql.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     initialSize: 1
