--- a/homeauto-center-device/src/main/resources/bootstrap.properties
+++ b/homeauto-center-device/src/main/resources/bootstrap.properties
@@ -1,5 +1,6 @@
 spring.cloud.nacos.config.server-addr=40.73.77.122:8848
 server.port=10015
+server.servlet.context-path=/device
 spring.cloud.nacos.config.namespace=33993f0b-c8e4-4986-9768-fd59c3dd64eb
 spring.cloud.nacos.config.group=home-auto
 spring.application.name=homeauto-center-device
