--- a/homeauto-center-oauth/src/main/resources/application-local.yml
+++ b/homeauto-center-oauth/src/main/resources/application-local.yml
@@ -121,25 +121,43 @@ homeauto:
       clients[0]:
         clientId: app
         clientSecret: app123
-        accessTokenValiditySeconds: 300
+        accessTokenValiditySeconds: 7200
         refreshTokenValiditySeconds: 86400
         redirectUris: http://127.0.0.1:10012/test/call/back
       clients[1]:
         clientId: homeauto
         clientSecret: homeauto
         # token失效时间
-        accessTokenValiditySeconds: 300
+        accessTokenValiditySeconds: 7200
         # 可刷新token有效期
         refreshTokenValiditySeconds: 86400
         redirectUris: http://127.0.0.1:10012/test/call/back
+    #需要被security拦截的url
+    requestPatterns: /login/**
+    #不需要登录认证的白名单
+    whitePatterns:
     excluded:
-      paths: /swagger-resources/**,/webjars/**,/v2/**,/swagger-ui.html/**,/**/login/**,/logout/**,/**/upload/**,/**/refresh/cache/**,/**/test/**,/**/login/**,/**/auth/**
+      #无需进行权限认证的url
+      paths:
     failure:
       statusParam: code
+
       msgParam: msg
   token:  #解析header中token
     enable: true
+ribbon:
+  ReadTimeout: 30000
+  ConnectTimeout: 5000
+  MaxAutoRetries: 1
+  OkToRetryOnAllOperations: false
 
 
 
-
+logging:
+  level:
+    com:
+      landleaf:
+        homeauto:
+          center:
+            oauth:
+              mapper: debug
