修改加密方式bcrypt

--- a/homeauto-common/pom.xml
+++ b/homeauto-common/pom.xml
@@ -155,6 +155,12 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>${jjwt.version}</version>
         </dependency>
+        <!--bcrypt加密算法-->
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>${bcrypt.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
