--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 		<easyexcel.version>2.1.4</easyexcel.version>
 		<rocketmq-client.version>3.2.6</rocketmq-client.version>
 		<nacos.version>0.2.2.RELEASE</nacos.version>
+		<bcrypt.version>0.9.0</bcrypt.version>
 	</properties>
 
 
