--- a/homeauto-center-file/src/main/resources/bootstrap.properties
+++ b/homeauto-center-file/src/main/resources/bootstrap.properties
@@ -5,4 +5,5 @@ spring.cloud.nacos.config.group=home-auto
 spring.application.name=homeauto-center-file
 #spring.cloud.nacos.config.file-extension=properties
 spring.cloud.nacos.config.file-extension=yaml
-spring.profiles.active=dev
+spring.profiles.active=local
+spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
