--- a/homeauto-common/pom.xml
+++ b/homeauto-common/pom.xml
@@ -171,6 +171,22 @@
             <artifactId>bcrypt</artifactId>
             <version>${bcrypt.version}</version>
         </dependency>
+        <!-- 文件上传支持-->
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form</artifactId>
+            <version>${feign-form-spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form-spring</artifactId>
+            <version>${feign-form-spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>${commons-fileupload.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
