--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
 		<rocketmq-client.version>3.2.6</rocketmq-client.version>
 		<nacos.version>0.2.2.RELEASE</nacos.version>
 		<bcrypt.version>0.9.0</bcrypt.version>
+		<feign-form-spring.version>3.8.0</feign-form-spring.version>
+		<commons-fileupload.version>1.3.3</commons-fileupload.version>
 	</properties>
 
 
