增加mqtt钩子回调接口,修改数据库连接地址为外网映射地址

--- a/homeauto-center-oauth/src/main/resources/application-local.yml
+++ b/homeauto-center-oauth/src/main/resources/application-local.yml
@@ -54,7 +54,8 @@ spring:
       socket-keep-alive: true
   ## mysql
   datasource:
-    url: jdbc:postgresql://172.20.11.204:5434/homeauto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
+#    url: jdbc:postgresql://172.20.11.204:5434/homeauto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
+    url: jdbc:postgresql://222.190.116.115:15434/homeauto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
     username: homeauto
     password: landleaf@123.com
     driver-class-name: org.postgresql.Driver
