--- a/homeauto-center-device/pom.xml
+++ b/homeauto-center-device/pom.xml
@@ -37,6 +37,11 @@
             <version>3.4.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
