--- a/homeauto-center-device/pom.xml
+++ b/homeauto-center-device/pom.xml
@@ -37,10 +37,18 @@
             <version>3.4.3</version>
         </dependency>
 
+        <!--自动配置-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!--德鲁伊连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.23</version>
         </dependency>
     </dependencies>
 
