--- a/homeauto-center-device/src/main/resources/bootstrap-dev.properties
+++ b/homeauto-center-device/src/main/resources/bootstrap-dev.properties
@@ -1,9 +1,11 @@
+#
+spring.cloud.nacos.discovery.server-addr=40.73.77.122:8848
+spring.cloud.nacos.discovery.namespace=33993f0b-c8e4-4986-9768-fd59c3dd64eb
+#
+## 开发时使用本地配置
+spring.cloud.nacos.config.enabled=true
 spring.cloud.nacos.config.server-addr=40.73.77.122:8848
-server.port=10015
-server.servlet.context-path=/device
 spring.cloud.nacos.config.namespace=33993f0b-c8e4-4986-9768-fd59c3dd64eb
 spring.cloud.nacos.config.group=home-auto
-spring.application.name=homeauto-center-device
-#spring.cloud.nacos.config.file-extension=properties
+spring.cloud.nacos.config.name=homeauto-center-device-dev
 spring.cloud.nacos.config.file-extension=yaml
-spring.profiles.active=local
