--- a/homeauto-center-device/src/main/resources/bootstrap-test.properties
+++ b/homeauto-center-device/src/main/resources/bootstrap-test.properties
@@ -1,8 +1,9 @@
+# 服务注册
+spring.cloud.nacos.discovery.server-addr=52.130.74.113:8848
+spring.cloud.nacos.discovery.namespace=3fc67268-9ca7-4ad7-993d-867d5c72146b
+# 服务配置
 spring.cloud.nacos.config.server-addr=52.130.74.113:8848
-server.port=10015
-server.servlet.context-path=/device
-spring.cloud.nacos.config.namespace=33993f0b-c8e4-4986-9768-fd59c3dd64eb
-spring.cloud.nacos.config.group=home-auto
-spring.application.name=homeauto-center-device
-#spring.cloud.nacos.config.file-extension=properties
+spring.cloud.nacos.config.namespace=3fc67268-9ca7-4ad7-993d-867d5c72146b
+spring.cloud.nacos.config.group=HOME_AUTO
+spring.cloud.nacos.config.name=homeauto-center-device
 spring.cloud.nacos.config.file-extension=yaml
