--- a/homeauto-center-device/src/main/resources/bootstrap-dev.properties
+++ b/homeauto-center-device/src/main/resources/bootstrap-dev.properties
@@ -3,7 +3,7 @@ spring.cloud.nacos.discovery.server-addr=40.73.77.122:8848
 spring.cloud.nacos.discovery.namespace=33993f0b-c8e4-4986-9768-fd59c3dd64eb
 #
 ## 开发时使用本地配置
-spring.cloud.nacos.config.enabled=true
+spring.cloud.nacos.config.enabled=false
 spring.cloud.nacos.config.server-addr=40.73.77.122:8848
 spring.cloud.nacos.config.namespace=33993f0b-c8e4-4986-9768-fd59c3dd64eb
 spring.cloud.nacos.config.group=home-auto
