PgSQL公网地址映射

--- a/homeauto-center-device/src/main/resources/application-dev.yml
+++ b/homeauto-center-device/src/main/resources/application-dev.yml
@@ -10,7 +10,8 @@ spring:
       uri: mongodb://root:aA123456@40.73.77.122:27017/cloud?authSource=cloud
   ## PgSQL
   datasource:
-    url: jdbc:postgresql://172.20.11.204:5434/homeauto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
+    #    url: jdbc:postgresql://172.20.11.204:5434/homeauto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
+    url: jdbc:postgresql://222.190.116.115:15434/homeauto?useUnicode=true&characterEncoding=utf8&serverTimeZone=CTT
     username: homeauto
     password: landleaf@123.com
     driver-class-name: org.postgresql.Driver
