--- a/homeauto-center-device/src/main/resources/bootstrap.properties
+++ b/homeauto-center-device/src/main/resources/bootstrap.properties
@@ -6,4 +6,4 @@ spring.cloud.nacos.config.group=home-auto
 spring.application.name=homeauto-center-device
 #spring.cloud.nacos.config.file-extension=properties
 spring.cloud.nacos.config.file-extension=yaml
-spring.profiles.active=local
+spring.profiles.active=test
