--- a/homeauto-common/pom.xml
+++ b/homeauto-common/pom.xml
@@ -114,6 +114,11 @@
             <version>${org.eclipse.paho.mqtt}</version>
         </dependency>
         <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>${bcpkix-jdk15on.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
