--- a/homeauto-center-gateway/src/main/resources/application-local.yml
+++ b/homeauto-center-gateway/src/main/resources/application-local.yml
@@ -69,7 +69,7 @@ homeauto:
     #需要登录认证的url
     requestPatterns: /**/auth/**,/**/device/**,/**/file/**,/**/adapter/**,/**/contact-screen/**,/**/contact-gateway/**
     #不需要登录认证的白名单
-    whitePatterns: /swagger-resources/**,/webjars/**,/v2/**,/swagger-ui.html/**,/**/login/**,/**/upload/**,/**/refresh/cache/**,/**/test/**,/**/msg/jg/**,/**/register/**,/**/verification_code/**,/**/forget_password/**,/**/forget/password,/**/upload/**,/**/forgetPassword/**,/**/send/**,/**/callback/mqtt/web_hook
+    whitePatterns: /swagger-resources/**,/webjars/**,/v2/**,/swagger-ui.html/**,/**/login/**,/**/upload/**,/**/refresh/cache/**,/**/test/**,/**/msg/jg/**,/**/register/**,/**/verification_code/**,/**/check/code,/**/forget_password/**,/**/forget/password,/**/upload/**,/**/forgetPassword/**,/**/send/**,/**/callback/mqtt/web_hook
     excluded:
       #无需进行权限认证的url
       paths: /**/refresh/cache/**,/**/test/**,/login/**,/**/xml/jg/**,/**/register/**,/**/verification_code/**,/**/forget_password/**,/**/upload/**,/**/forgetPassword/**,/**/send/**,/**/logout/**
