--- a/homeauto-center-device/src/main/resources/bootstrap.yml
+++ b/homeauto-center-device/src/main/resources/bootstrap.yml
@@ -8,8 +8,8 @@ spring:
       config:
         enabled: true
         server-addr: 52.130.74.113:8848
-        namespace: 45962b69-1266-4973-8ec5-728299a98747
-        group: home-auto
+        namespace: 4d2a4883-79a0-4867-bd7b-06f6bb5281b0
+        group: home-auto-test
         name: homeauto-center-device-test
         file-extension: yaml
 server:
