增加大屏模拟客户端homeauto-contact-screen-client

--- a/homeauto-center-device/src/main/resources/bootstrap.yml
+++ b/homeauto-center-device/src/main/resources/bootstrap.yml
@@ -7,3 +7,9 @@ server:
   port: 10015
   servlet:
     context-path: /device
+
+
+homeauto:
+  sobot:
+    appid:  d9bb32e0ca2448679177ca1562365a2b
+    appkey: X7MtE364p373
