--- a/pom.xml
+++ b/pom.xml
@@ -1,212 +1,232 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.landleaf</groupId>
-	<artifactId>homeauto</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.landleaf</groupId>
+    <artifactId>homeauto</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.7.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
-	<name>homeauto</name>
-	<description>landleaf home auto</description>
+    <name>homeauto</name>
+    <description>landleaf home auto</description>
 
 
-	<modules>
-		<module>homeauto-center-gateway</module>
-		<module>homeauto-center-oauth</module>
-		<module>homeauto-center-device</module>
-		<module>homeauto-center-file</module>
-		<module>homeauto-center-adapter</module>
-		<module>homeauto-contact-gateway</module>
-		<module>homeauto-contact-screen</module>
-		<module>homeauto-common</module>
+    <modules>
+        <module>homeauto-center-gateway</module>
+        <module>homeauto-center-oauth</module>
+        <module>homeauto-center-device</module>
+        <module>homeauto-center-file</module>
+        <module>homeauto-center-adapter</module>
+        <module>homeauto-contact-gateway</module>
+        <module>homeauto-contact-screen</module>
+        <module>homeauto-common</module>
         <module>homeauto-center-websocket</module>
-        <module>homeauto-contact-screen-client</module>
+        <module>homeauto-model</module>
     </modules>
 
 
-
-	<properties>
-		<com.landleaf.homeauto.version>0.0.1-SNAPSHOT</com.landleaf.homeauto.version>
-		<java.version>1.8</java.version>
-		<spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
-		<spring-cloud.version>Greenwich.SR6</spring-cloud.version>
-		<fastjson.version>1.2.70</fastjson.version>
-		<jjwt.version>0.10.5</jjwt.version>
-		<com.alibaba.druid>1.1.18</com.alibaba.druid>
-		<mybatis.plus.boot.starter>3.1.2</mybatis.plus.boot.starter>
-		<mybatis.plus.generator.version>3.1.2</mybatis.plus.generator.version>
-		<pagehelper.version>1.2.12</pagehelper.version>
-		<commons-lang3.version>3.8.1</commons-lang3.version>
-		<commons.collections.version>3.2.1</commons.collections.version>
-		<commons-httpclient.version>3.1</commons-httpclient.version>
-		<hutool.version>4.5.18</hutool.version>
-		<thumbnailator.version>0.4.8</thumbnailator.version>
-		<mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
-		<springfox.swagger>2.9.2</springfox.swagger>
-		<org.eclipse.paho.mqtt>1.2.1</org.eclipse.paho.mqtt>
-		<bcpkix-jdk15on.version>1.47</bcpkix-jdk15on.version>
-		<orika-core.version>1.5.4</orika-core.version>
-		<pinyin4j.version>2.5.0</pinyin4j.version>
-		<mysql.version>6.0.6</mysql.version>
-		<javax.mail.version>1.4.7</javax.mail.version>
-		<easyexcel.version>2.1.4</easyexcel.version>
-		<rocketmq-client.version>3.2.6</rocketmq-client.version>
-		<nacos.version>0.2.2.RELEASE</nacos.version>
-		<bcrypt.version>0.9.0</bcrypt.version>
-		<feign-form-spring.version>3.8.0</feign-form-spring.version>
-		<commons-fileupload.version>1.3.3</commons-fileupload.version>
-	</properties>
-
-
+    <properties>
+        <com.landleaf.homeauto.version>0.0.1-SNAPSHOT</com.landleaf.homeauto.version>
+        <java.version>1.8</java.version>
+        <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
+        <spring-cloud.version>Greenwich.SR6</spring-cloud.version>
+        <fastjson.version>1.2.70</fastjson.version>
+        <jjwt.version>0.10.5</jjwt.version>
+        <com.alibaba.druid>1.1.18</com.alibaba.druid>
+        <mybatis-plus.version>3.1.2</mybatis-plus.version>
+        <mybatis.plus.boot.starter>3.1.2</mybatis.plus.boot.starter>
+        <mybatis.plus.generator.version>3.1.2</mybatis.plus.generator.version>
+        <pagehelper.version>1.2.12</pagehelper.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
+        <commons.collections.version>3.2.1</commons.collections.version>
+        <commons-httpclient.version>3.1</commons-httpclient.version>
+        <hutool.version>4.5.18</hutool.version>
+        <thumbnailator.version>0.4.8</thumbnailator.version>
+        <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
+        <springfox.swagger>2.9.2</springfox.swagger>
+        <org.eclipse.paho.mqtt>1.2.1</org.eclipse.paho.mqtt>
+        <bcpkix-jdk15on.version>1.47</bcpkix-jdk15on.version>
+        <orika-core.version>1.5.4</orika-core.version>
+        <pinyin4j.version>2.5.0</pinyin4j.version>
+        <mysql.version>6.0.6</mysql.version>
+        <javax.mail.version>1.4.7</javax.mail.version>
+        <easyexcel.version>2.1.4</easyexcel.version>
+        <rocketmq-client.version>3.2.6</rocketmq-client.version>
+        <nacos.version>0.2.2.RELEASE</nacos.version>
+        <bcrypt.version>0.9.0</bcrypt.version>
+        <feign-form-spring.version>3.8.0</feign-form-spring.version>
+        <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    </properties>
 
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba.cloud</groupId>
-				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
-				<version>${spring-cloud-alibaba.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring-cloud-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.persistence</groupId>
+                <artifactId>javax.persistence-api</artifactId>
+                <version>2.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+        <!--nacos依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <version>0.2.2.RELEASE</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <version>0.2.2.RELEASE</version>
+        </dependency>
+        <!-- cloud-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
-		<!--nacos依赖-->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-			<version>0.2.2.RELEASE</version>
-			<type>pom</type>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-			<version>0.2.2.RELEASE</version>
-		</dependency>
-		<!-- cloud-->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.junit.vintage</groupId>
-					<artifactId>junit-vintage-engine</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${springfox.swagger}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${springfox.swagger}</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox.swagger}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox.swagger}</version>
+        </dependency>
+    </dependencies>
 
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<!--配置生成源码包-->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<!-- 使用mvn mybatis-virgo:generate 直接生成 -->
-				<groupId>org.mybatis.generator</groupId>
-				<artifactId>mybatis-generator-maven-plugin</artifactId>
-				<version>1.3.2</version>
-				<configuration>
-					<overwrite>true</overwrite>
-					<configurationFile>${project.basedir}/src/main/resources/config/generatorConfig.xml
-					</configurationFile>
-				</configuration>
-			</plugin>
-		</plugins>
-		<resources>
-			<!-- 如果没有该配置，java 路径下的配置文件不会被编译-->
-			<resource>
-				<directory>${project.basedir}/src/main/java</directory>
-				<includes>
-					<include>**/*.xml</include>
-					<include>**/*.yml</include>
-					<include>**/*.properties</include>
-					<include>**/*.*</include>
-				</includes>
-			</resource>
-			<resource>
-				<directory>${project.basedir}/src/main/resources</directory>
-				<includes>
-					<include>**/*.xml</include>
-					<include>**/*.yml</include>
-					<include>**/*.properties</include>
-					<include>**/*.*</include>
-				</includes>
-			</resource>
-		</resources>
-	</build>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <!--配置生成源码包-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <!-- 使用mvn mybatis-virgo:generate 直接生成 -->
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <overwrite>true</overwrite>
+                    <configurationFile>${project.basedir}/src/main/resources/config/generatorConfig.xml
+                    </configurationFile>
+                </configuration>
+            </plugin>
+        </plugins>
+        <resources>
+            <!-- 如果没有该配置，java 路径下的配置文件不会被编译-->
+            <resource>
+                <directory>${project.basedir}/src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.yml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.yml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
+        </resources>
+    </build>
 
 </project>
