--- a/homeauto-center-websocket/pom.xml
+++ b/homeauto-center-websocket/pom.xml
@@ -12,12 +12,6 @@
     <artifactId>homeauto-center-websocket</artifactId>
 
     <dependencies>
-<!--        &lt;!&ndash; homeauto-common模块 &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.landleaf</groupId>-->
-<!--            <artifactId>homeauto-common</artifactId>-->
-<!--            <version>${com.landleaf.homeauto.version}</version>-->
-<!--        </dependency>-->
 
         <!--websocket-->
         <dependency>
@@ -30,6 +24,12 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-client</artifactId>
             <version>4.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
