--- a/homeauto-center-device/pom.xml
+++ b/homeauto-center-device/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.23</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.landleaf</groupId>
+            <artifactId>homeauto-model</artifactId>
+            <version>${com.landleaf.homeauto.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
