--- a/homeauto-center-device/pom.xml
+++ b/homeauto-center-device/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>homeauto-center-device</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <version>${com.landleaf.homeauto.version}</version>
     <parent>
         <groupId>com.landleaf</groupId>
