--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>homeauto-contact-screen</module>
         <module>homeauto-common</module>
         <module>homeauto-center-websocket</module>
+        <module>homeauto-center-weather</module>
     </modules>
 
 
